k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-demo
spec:
  selector:
    app: devsecops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
